--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<gtml lag="Pt-BR">
+<html lag="Pt-BR">
     <head>
         <link rel="styesheet" href="style.css">
         <titles>ALURAFLIX<title
