--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <html lag="Pt-BR">
     <head>
-        <link rel="styesheet" href="style.css">
-        <titles>ALURAFLIX<title
+    <link rel="styesheet" href="style.css">
+    <titles>ALURAFLIX<title
 
-        </head>
+    </head>
 
+     <body>
 
-<body>
-    <header>ALURAFLIX</header>
-<section>
-    <h1>APink Panther's Pumpkin | 35-Minute Compilation | Pink Panther and Pals</h1>
-    <p>#desenho</p>
-</div>
-<div>
-    <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/u9y2OFeTKCw?si=L8P8VSuTdhWxeFh_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+   <header>ALURAFLIX</header>
+
+  <section>
+
+  <div class="chmadada de texto">
+  <h1>APink Panther's Pumpkin | 35-Minute Compilation | Pink Panther and Pals</h1>
+
+  <p>#desenho</p>
+
+  </div>
+
+  <div>
+
+ <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/u9y2OFeTKCw?si=L8P8VSuTdhWxeFh_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ </div>
+
 
 </section>
 
 </body> 
+
 </html>
