--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html lag="Pt-BR">
     <head>
     <link rel="styesheet" href="style.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&display=swap" rel="stylesheet">
     <titles>ALURAFLIX<title
+    
 
     </head>
 
