--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lag="Pt-BR">
+<html lang="Pt-BR"
     <head>
     <link rel="styesheet" href="style.css">
     
@@ -16,7 +16,7 @@
 
   <section>
 
-  <div class="chmadada de texto">
+  <div class="chamada-texto">
   <h1>APink Panther's Pumpkin | 35-Minute Compilation | Pink Panther and Pals</h1>
 
   <p>#desenho</p>
