--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
-<html lang="Pt-BR"
-    <head>
-    <link rel="styesheet" href="style.css">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&display=swap" rel="stylesheet">
-    <titles>ALURAFLIX<title
-    
-
-    </head>
-
-     <body>
-
-   <header>ALURAFLIX</header>
-
-  <section>
-
-  <div class="chamada-texto">
-  <h1>APink Panther's Pumpkin | 35-Minute Compilation | Pink Panther and Pals</h1>
-
-  <p>#desenho</p>
-
-  </div>
-
-  <div>
-
- <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/u9y2OFeTKCw?si=L8P8VSuTdhWxeFh_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- </div>
-
-
+<html lang="pt-BR">
+<head>
+<link rel="stylesheet" href="style.css">
+<title>ALURAFLIX</title>
+</head>
+<body>
+<header>ALURAFLIX</header>
+<section class="chamada"> 
+    <h1>
+Pink Panther Saves the Galaxy!</h1>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/E8bpnTDhy_A?si=C1adCgny3aN9Qb82&amp;start=1371" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
 </section>
-
-</body> 
-
-</html>
